--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ keywords = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10,<3.14"
 dill = "^0.3.7"
 requests = "^2.31.0"
 msgpack = "^1.0.7"
@@ -45,7 +45,6 @@ psutil = ">=5.9.8,<7.0.0"
 pydantic = "^2.5.3"
 pandas = "^2.2.0"
 plotly = {version = "^5.18.0", optional = true}
-numpy = ">=1.26.3,<3.0.0"
 matplotlib = {version = "^3.8.2", optional = true}
 typing_extensions = { version = "^4.11.0", python = "<3.10" }
 toml = "^0.10.2"
@@ -55,6 +54,7 @@ humanfriendly = "^10.0"
 tabulate = "^0.9.0"
 randomname = "^0.2.1"
 codecarbon = "^2.7.1"
+numpy = "^2.1.2"
 
 [tool.poetry.extras]
 plot = ["matplotlib", "plotly"]
