--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -23,9 +23,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python 3.13
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: "3.13"
     - name: Install dependencies
@@ -35,7 +35,7 @@ jobs:
         export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
         export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
-        poetry run python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        # poetry run python -m pip install torch --index-url https://download.pytorch.org/whl/cpu FIXME: PyTorch current broken for Python3.13
         poetry run pytest -x --cov --cov-report=xml tests/unit/ tests/refactor/ -m 'not scenario' -c /dev/null -p no:warnings -n 0
     - name: Upload coverage reports to Codecov
       run: |
