--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ tabulate = "^0.9.0"
 randomname = "^0.2.1"
 codecarbon = "^2.7.1"
 numpy = "^2.1.2"
+flatdict = "^4.0.1"
 
 [tool.poetry.extras]
 plot = ["matplotlib", "plotly"]
