--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ randomname = "^0.2.1"
 codecarbon = "^2.7.1"
 numpy = "^2.1.2"
 flatdict = "^4.0.1"
+semver = "^3.0.2"
 
 [tool.poetry.extras]
 plot = ["matplotlib", "plotly"]
