--- a/.github/workflows/test_client_macos_nightlies.yml
+++ b/.github/workflows/test_client_macos_nightlies.yml
@@ -28,8 +28,8 @@ jobs:
         python -m pip install poetry
     - name: Test with pytest
       run: |
-        export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
-        export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
+        export SIMVUE_URL=${{ secrets.SIMVUE_NIGHTLY_URL }}
+        export SIMVUE_TOKEN=${{ secrets.SIMVUE_NIGHTLY_TOKEN }}
         poetry install --all-extras
         poetry run python -m pip install torch
         poetry run pytest tests/ -m 'not scenario'
