--- a/.github/workflows/test_client_ubuntu_nightlies.yml
+++ b/.github/workflows/test_client_ubuntu_nightlies.yml
@@ -1,12 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Simvue Client (Python Versions)
+name: Simvue Client (Ubuntu)
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 1 * * *'
+    - cron: '30 0 * * *'
 
 permissions:
   contents: read
@@ -17,17 +17,15 @@ concurrency:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    strategy:
-        matrix:
-            python-version: ['3.10', '3.11', '3.12']
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
-        python-version: "${{ matrix.python-version }}"
+        python-version: "3.13"
     - name: Install dependencies
       run: python -m pip install poetry
     - name: Test with pytest
@@ -35,4 +33,5 @@ jobs:
         export SIMVUE_URL=${{ secrets.SIMVUE_NIGHTLY_URL }}
         export SIMVUE_TOKEN=${{ secrets.SIMVUE_NIGHTLY_TOKEN }}
         poetry install --all-extras
-        poetry run pytest tests/ -m 'not scenario'
+        # poetry run python -m pip install torch --index-url https://download.pytorch.org/whl/cpu FIXME: PyTorch current broken for Python3.13
+        poetry run pytest tests/ -x --cov --cov-report=xml -m 'not scenario' -c /dev/null -p no:warnings -n 0 -v
