--- a/.github/workflows/test_client_windows_nightlies.yml
+++ b/.github/workflows/test_client_windows_nightlies.yml
@@ -2,6 +2,8 @@ name: Simvue Client (Windows)
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
 
 permissions:
   contents: read
@@ -14,12 +16,15 @@ jobs:
   build:
     runs-on: windows-latest
     timeout-minutes: 30
+    strategy:
+        matrix:
+            python-version: ['3.12', '3.13']
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.12
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
-        python-version: "3.12"
+        python-version: "${{ matrix.python-version }}"
     - name: Install dependencies
       run: |
         rm poetry.lock
@@ -27,8 +32,8 @@ jobs:
     - name: Test with pytest
       shell: bash
       run: |
-        export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
-        export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
+        export SIMVUE_URL=${{ secrets.SIMVUE_NIGHTLY_URL }}
+        export SIMVUE_TOKEN=${{ secrets.SIMVUE_NIGHTLY_TOKEN }}
         poetry install --all-extras
         poetry run python -m pip install torch
         poetry run pytest tests/ -m 'not scenario' -m 'not unix'
