--- a/.github/workflows/test_client_macos_nightlies.yml
+++ b/.github/workflows/test_client_macos_nightlies.yml
@@ -31,5 +31,5 @@ jobs:
         export SIMVUE_URL=${{ secrets.SIMVUE_NIGHTLY_URL }}
         export SIMVUE_TOKEN=${{ secrets.SIMVUE_NIGHTLY_TOKEN }}
         poetry install --all-extras
-        poetry run python -m pip install torch
+        # poetry run python -m pip install torch #FIXME: Torch tests skipped
         poetry run pytest tests/ -m 'not scenario'
