--- a/.github/workflows/test_client_windows_nightlies.yml
+++ b/.github/workflows/test_client_windows_nightlies.yml
@@ -35,5 +35,5 @@ jobs:
         export SIMVUE_URL=${{ secrets.SIMVUE_NIGHTLY_URL }}
         export SIMVUE_TOKEN=${{ secrets.SIMVUE_NIGHTLY_TOKEN }}
         poetry install --all-extras
-        poetry run python -m pip install torch
+        # poetry run python -m pip install torch #FIXME: Torch tests skipped
         poetry run pytest tests/ -m 'not scenario' -m 'not unix'
