--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ tabulate = "^0.9.0"
 randomname = "^0.2.1"
 codecarbon = "^2.7.1"
 numpy = "^2.1.2"
+boltons = "^24.1.0"
 
 [tool.poetry.extras]
 plot = ["matplotlib", "plotly"]
@@ -71,6 +72,7 @@ pytest-mock = "^3.14.0"
 pytest-sugar = "^1.0.0"
 pytest-xdist = "^3.6.1"
 jinja2 = "^3.1.4"
+types-requests = "^2.32.0.20241016"
 
 [build-system]
 requires = ["poetry-core"]
