--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ humanfriendly = "^10.0"
 tabulate = "^0.9.0"
 randomname = "^0.2.1"
 codecarbon = "^2.7.1"
+semver = "^3.0.2"
 
 [tool.poetry.extras]
 plot = ["matplotlib", "plotly"]
