--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ pytest-mock = "^3.14.0"
 pytest-sugar = "^1.0.0"
 pytest-xdist = "^3.6.1"
 jinja2 = "^3.1.4"
+pre-commit = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
