--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,9 +39,7 @@ python = "^3.10,<3.14"
 dill = "^0.3.7"
 requests = "^2.31.0"
 msgpack = "^1.0.7"
-tenacity = ">=8.2.3,<10.0.0"
 PyJWT = "^2.8.0"
-psutil = ">=5.9.8,<7.0.0"
 pydantic = "^2.5.3"
 pandas = "^2.2.0"
 plotly = {version = "^5.18.0", optional = true}
@@ -58,6 +56,8 @@ numpy = "^2.1.2"
 flatdict = "^4.0.1"
 semver = "^3.0.2"
 email-validator = "^2.2.0"
+psutil = "^6.1.1"
+tenacity = "^9.0.0"
 
 [tool.poetry.extras]
 plot = ["matplotlib", "plotly"]
