--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ testpaths = [
     "tests"
 ]
 markers = [
+    "codecarbon: tests for emission metrics",
     "client: tests of Simvue client",
     "converters: tests for Simvue object converters",
     "dispatch: test data dispatcher",
