--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ pytest-xdist = "^3.6.1"
 jinja2 = "^3.1.6"
 types-requests = "^2.32.0.20241016"
 interrogate = "^1.7.0"
+pytest-timeout = "^2.3.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -94,7 +95,7 @@ testpaths = [
     "tests"
 ]
 markers = [
-    "codecarbon: tests for emission metrics",
+    "eco: tests for emission metrics",
     "client: tests of Simvue client",
     "converters: tests for Simvue object converters",
     "dispatch: test data dispatcher",
