--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -18,8 +18,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-
+  online_unit_tests:
     runs-on: ubuntu-latest
     timeout-minutes: 40
     steps:
@@ -40,9 +39,70 @@ jobs:
       env:
         SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
-      run: python -m pytest tests/ -x --cov --cov-report=xml -m 'not scenario' -c /dev/null -p no:warnings -n 0 -v
-    - name: Upload coverage reports to Codecov
+      run: python -m pytest tests/unit/ -x  -m online -c /dev/null -p no:warnings -n 0 -v
+  offline_unit_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 40
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install dependencies
       run: |
-        curl -Os https://uploader.codecov.io/latest/linux/codecov
-        chmod +x codecov
-        ./codecov -t ${CODECOV_TOKEN}
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
+      run: python -m pytest tests/unit/ -x  -m offline -c /dev/null -p no:warnings -n 0 -v
+  online_functional_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 40
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install dependencies
+      run: |
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
+      run: python -m pytest tests/functional/ -x  -m online -c /dev/null -p no:warnings -n 0 -v
+  offline_functional_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 40
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install dependencies
+      run: |
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
+      run: python -m pytest tests/functional/ -x  -m offline -c /dev/null -p no:warnings -n 0 -v
