--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -106,3 +106,47 @@ jobs:
         SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: python -m pytest tests/functional/ -x  -m offline -c /dev/null -p no:warnings -n 0 -v
+  other_unit_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 40
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install dependencies
+      run: |
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
+      run: python -m pytest tests/unit/ -x  -m 'not offline' -m 'not online' -m 'not scenario' -c /dev/null -p no:warnings -n 0 -v
+  other_functional_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 40
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install dependencies
+      run: |
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
+      run: python -m pytest tests/functional/ -x  -m 'not offline' -m 'not online' -m 'not scenario' -c /dev/null -p no:warnings -n 0 -v
