--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -42,7 +42,7 @@ jobs:
       run: >-
         python -m pytest tests/unit/ -x
         -m online -c /dev/null -p no:warnings
-        -n 0 -v -o cache_dir=.pytest-cache
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   offline_unit_tests:
     runs-on: ubuntu-latest
     timeout-minutes: 40
@@ -67,7 +67,7 @@ jobs:
       run: >-
         python -m pytest tests/unit/ -x
         -m offline -c /dev/null -p no:warnings
-        -n 0 -v -o cache_dir=.pytest-cache
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   online_functional_tests:
     runs-on: ubuntu-latest
     timeout-minutes: 40
@@ -92,7 +92,7 @@ jobs:
       run: >-
         python -m pytest tests/functional/ -x
         -m online -c /dev/null -p no:warnings
-        -n 0 -v -o cache_dir=.pytest-cache
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   offline_functional_tests:
     runs-on: ubuntu-latest
     timeout-minutes: 40
@@ -117,7 +117,7 @@ jobs:
       run: >-
         python -m pytest tests/functional/ -x
         -m offline -c /dev/null -p no:warnings
-        -n 0 -v -o cache_dir=.pytest-cache
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   other_unit_tests:
     runs-on: ubuntu-latest
     timeout-minutes: 40
@@ -143,7 +143,7 @@ jobs:
         python -m pytest tests/unit/ -x
         -m 'not offline' -m 'not online'
         -m 'not scenario' -c /dev/null
-        -p no:warnings -n 0 -v -o cache_dir=.pytest-cache
+        -p no:warnings -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
   other_functional_tests:
     runs-on: ubuntu-latest
     timeout-minutes: 40
@@ -169,4 +169,4 @@ jobs:
         python -m pytest tests/functional/ -x
         -m 'not offline' -m 'not online'
         -m 'not scenario' -c /dev/null
-        -p no:warnings -n 0 -v -o cache_dir=.pytest-cache
+        -p no:warnings -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
