--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -18,9 +18,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  online_unit_tests:
+  client_tests:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.13
@@ -40,12 +40,12 @@ jobs:
         SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
-        python -m pytest tests/unit/ -x
-        -m online -c /dev/null -p no:warnings
+        python -m pytest -x
+        -m client -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
-  offline_unit_tests:
+  converters_tests:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.13
@@ -65,12 +65,12 @@ jobs:
         SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
-        python -m pytest tests/unit/ -x
-        -m offline -c /dev/null -p no:warnings
+        python -m pytest -x
+        -m converters -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
-  online_functional_tests:
+  dispatch_tests:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.13
@@ -82,7 +82,6 @@ jobs:
         python -m pip install poetry
         poetry self add poetry-plugin-export
         poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
-        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
         python -m pip install -r requirements.txt
         python -m pip install .
     - name: Test with pytest
@@ -90,12 +89,12 @@ jobs:
         SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
-        python -m pytest tests/functional/ -x
-        -m online -m "not eco" -c /dev/null -p no:warnings
+        python -m pytest -x
+        -m dispatch -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
-  offline_functional_tests:
+  run_tests_online:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.13
@@ -115,12 +114,12 @@ jobs:
         SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
-        python -m pytest tests/functional/ -x
-        -m offline -c /dev/null -p no:warnings
+        python -m pytest -x
+        -m run -m online -c /dev/null -p no:warnings
         -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
-  other_unit_tests:
+  run_tests_offline:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.13
@@ -140,13 +139,12 @@ jobs:
         SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
-        python -m pytest tests/unit/ -x
-        -m 'not offline' -m 'not online'
-        -m 'not scenario' -c /dev/null
-        -p no:warnings -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
-  other_functional_tests:
+        python -m pytest -x
+        -m run -m offline -c /dev/null -p no:warnings
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+  config_tests:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.13
@@ -158,7 +156,6 @@ jobs:
         python -m pip install poetry
         poetry self add poetry-plugin-export
         poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
-        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
         python -m pip install -r requirements.txt
         python -m pip install .
     - name: Test with pytest
@@ -166,7 +163,78 @@ jobs:
         SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
         SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: >-
-        python -m pytest tests/functional/ -x
-        -m 'not offline' -m 'not online'
-        -m 'not scenario' -c /dev/null
-        -p no:warnings -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+        python -m pytest -x
+        -m config -c /dev/null -p no:warnings
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+  executor_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install dependencies
+      run: |
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
+      run: >-
+        python -m pytest -x
+        -m executor -c /dev/null -p no:warnings
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+  api_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install dependencies
+      run: |
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
+      run: >-
+        python -m pytest -x
+        -m api -c /dev/null -p no:warnings
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
+  local_tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Install dependencies
+      run: |
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
+      run: >-
+        python -m pytest -x
+        -m local -c /dev/null -p no:warnings
+        -n 0 -v -o cache_dir=${GITHUB_WORKSPACE}/.pytest-cache
