--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ keywords = [
 ]
 dependencies = [
   "requests (>=2.32.3,<3.0.0)",
-  "pydantic (>=2.10.6,<3.0.0)",
+  "pydantic (>=2.11,<3.0.0)",
   "tabulate (>=0.9.0,<0.10.0)",
   "msgpack (>=1.1.0,<2.0.0)",
   "pyjwt (>=2.10.1,<3.0.0)",
@@ -54,6 +54,7 @@ dependencies = [
   "typing-extensions (>=4.12.2,<5.0.0) ; python_version < \"3.11\"",
   "deepmerge (>=2.0,<3.0)",
   "geocoder (>=1.38.1,<2.0.0)",
+  "pydantic-extra-types (>=2.10.5,<3.0.0)",
 ]
 
 [project.urls]
